--- a/asm-iap/cluster/istio-operator.yaml
+++ b/asm-iap/cluster/istio-operator.yaml
@@ -31,6 +31,15 @@ spec:
           type: NodePort
           ports:
             - name: status-port
+              nodePort: 31223 # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.ingress.statusPort"}
+              port: 15021
+              protocol: TCP
+              targetPort: 15021
+            - nodePort: 31224 # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.ingress.httpPort"}
+              port: 80
+              targetPort: 8080
+              name: http2
+            - name: status-port
               nodePort: 31223
               port: 15021
               protocol: TCP
