--- a/scripts/asm-installer/cloudbuild.yaml
+++ b/scripts/asm-installer/cloudbuild.yaml
@@ -1,4 +1,7 @@
 steps:
+  ########
+  # SETUP
+  ########
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'scripts/asm-installer'
   id: 'build-tester-image'
@@ -109,6 +112,9 @@ steps:
   env:
   - 'CLUSTER_LOCATION=${_CLUSTER_LOCATION}'
 
+  #############
+  # FAST TESTS
+  #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
   id: 'run-cli-tests'
@@ -122,8 +128,26 @@ steps:
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
-  timeout: 2400s # 40 mins
+  timeout: 120s
 
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
+  id: 'run-print-config-test'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./tests/run_print_config_test
+  waitFor:
+  - 'fetch-secrets'
+  env:
+  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+  - 'KEY_FILE=${_KEY_FILE}'
+  timeout: 120s
+
+  #############
+  # SLOW TESTS
+  #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
   id: 'run-basic-suite'
@@ -136,7 +160,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -156,7 +181,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -176,7 +202,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -196,7 +223,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -216,7 +244,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -236,7 +265,8 @@ steps:
     --BUILD_ID "${BUILD_ID}"
     --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
   waitFor:
-  - 'fetch-secrets'
+  - 'run-print-config-test'
+  - 'run-cli-tests'
   env:
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
@@ -264,8 +294,10 @@ steps:
       "gs://${_BUCKET_NAME}/${_SCRIPT_NAME}.sha256"
   waitFor:
   - 'run-basic-suite'
+  - 'run-install-custom-cert-suite'
   - 'run-migration-suite-meshca'
   - 'run-migration-suite-citadel'
+  - 'run-migration-suite-citadel-previous-version'
 
 substitutions:
   _BUCKET_NAME: my-gcs-bucket
