--- a/scripts/asm-installer/cloudbuild.yaml
+++ b/scripts/asm-installer/cloudbuild.yaml
@@ -128,6 +128,9 @@ steps:
   waitFor:
   - 'fetch-secrets'
   env:
+  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
   timeout: 120s
@@ -143,6 +146,9 @@ steps:
   waitFor:
   - 'fetch-secrets'
   env:
+  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
   - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
   - 'KEY_FILE=${_KEY_FILE}'
   - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
@@ -241,28 +247,27 @@ steps:
   - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
   timeout: 2400s # 40 mins
 
-  # TODO: not working for 1.8 yet
-  #- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  #  dir: 'scripts/asm-installer'
-  #  id: 'run-migration-suite-meshca-previous-version'
-  #  entrypoint: '/bin/bash'
-  #  args:
-  #  - '-c'
-  #  - >
-  #    ./tests/run_migration_suite_meshca_prev
-  #    --PROJECT_ID "${PROJECT_ID}"
-  #    --BUILD_ID "${BUILD_ID}"
-  #    --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
-  #  waitFor:
-  #  - 'run-print-config-test'
-  #  - 'run-cli-tests'
-  #  env:
-  #  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
-  #  - 'KEY_FILE=${_KEY_FILE}'
-  #  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
-  #  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
-  #  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-  #  timeout: 2400s # 40 mins
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
+  id: 'run-migration-suite-meshca-previous-version'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./tests/run_migration_suite_meshca_prev
+    --PROJECT_ID "${PROJECT_ID}"
+    --BUILD_ID "${BUILD_ID}"
+    --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
+  waitFor:
+  - 'run-print-config-test'
+  - 'run-cli-tests'
+  env:
+  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+  - 'KEY_FILE=${_KEY_FILE}'
+  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+  timeout: 2400s # 40 mins
 
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'scripts/asm-installer'
@@ -286,28 +291,27 @@ steps:
   - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
   timeout: 2400s # 40 mins
 
-  # TODO: not working for 1.8 yet
-  #- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
-  #  dir: 'scripts/asm-installer'
-  #  id: 'run-migration-suite-citadel-previous-version'
-  #  entrypoint: '/bin/bash'
-  #  args:
-  #  - '-c'
-  #  - >
-  #    ./tests/run_migration_suite_citadel_prev
-  #    --PROJECT_ID "${PROJECT_ID}"
-  #    --BUILD_ID "${BUILD_ID}"
-  #    --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
-  #  waitFor:
-  #  - 'run-print-config-test'
-  #  - 'run-cli-tests'
-  #  env:
-  #  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
-  #  - 'KEY_FILE=${_KEY_FILE}'
-  #  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
-  #  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
-  #  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
-  #  timeout: 2400s # 40 mins
+- name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+  dir: 'scripts/asm-installer'
+  id: 'run-migration-suite-citadel-previous-version'
+  entrypoint: '/bin/bash'
+  args:
+  - '-c'
+  - >
+    ./tests/run_migration_suite_citadel_prev
+    --PROJECT_ID "${PROJECT_ID}"
+    --BUILD_ID "${BUILD_ID}"
+    --CLUSTER_LOCATION "${_CLUSTER_LOCATION}"
+  waitFor:
+  - 'run-print-config-test'
+  - 'run-cli-tests'
+  env:
+  - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
+  - 'KEY_FILE=${_KEY_FILE}'
+  - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
+  - '_CI_ASM_PKG_LOCATION=${_PKG_LOCATION}'
+  - '_CI_ASM_KPT_BRANCH=${_ASM_PKG_BRANCH}'
+  timeout: 2400s # 40 mins
 
 - name: 'gcr.io/cloud-builders/gcloud'
   dir: 'scripts/asm-installer'
