add targetPorts for ports <1024

--- a/asm/istio/options/internal-load-balancer.yaml
+++ b/asm/istio/options/internal-load-balancer.yaml
@@ -29,6 +29,8 @@ spec:
             port: 15020
           - name: http2
             port: 80
+            targetPort: 8080
           - name: https
             port: 443
+            targetPort: 8443
 # [END docs]
