--- a/asm/istio/istio-operator.yaml
+++ b/asm/istio/istio-operator.yaml
@@ -36,6 +36,9 @@ spec:
       proxyMetadata:
         GCE_METADATA_HOST: "metadata.google.internal"
   values:
+    pilot:
+      env:
+        PILOT_ENABLE_WORKLOAD_ENTRY_AUTOREGISTRATION: true
     global:
       # Enable SDS
       sds:
