--- a/asm/identity-provider/identityprovider-crd.yaml
+++ b/asm/identity-provider/identityprovider-crd.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: (v0.2.2)
+    controller-gen.kubebuilder.io/version: v0.2.2
   creationTimestamp: null
   name: identityproviders.security.cloud.google.com
 spec:
