update Docerfile to have bazel and npm

--- a/asmcli/Dockerfile
+++ b/asmcli/Dockerfile
@@ -1,7 +1,5 @@
 # this is using debian, with a "minimal footprint" install for gcloud
 FROM gcr.io/google.com/cloudsdktool/cloud-sdk:slim
-# cloudbuild will mount a volume in this path
-WORKDIR /workspace/asmcli
 # cloudbuild will override this variable:
 ENV SERVICE_ACCOUNT my_sa_email_goes_here
 # cloudbuild will override this variable:
@@ -10,8 +8,13 @@ ENV KEY_FILE path_to_a_key_file_goes_here
 RUN apt-get install google-cloud-sdk-kpt jq kubectl -y
 # install test dependencies
 RUN apt-get install shellcheck posh bc procps openssl yamllint -y
-# copy source files into WORKDIR
-COPY asmcli ./
-COPY tests ./tests/
-COPY Dockerfile ./
+
+# https://docs.bazel.build/versions/master/install-ubuntu.html
+RUN \
+  apt install apt-transport-https curl gnupg -y && \
+  curl -fsSL https://bazel.build/bazel-release.pub.gpg | gpg --dearmor > bazel.gpg && \
+  mv bazel.gpg /etc/apt/trusted.gpg.d/ && \
+  echo "deb [arch=amd64] https://storage.googleapis.com/bazel-apt stable jdk1.8" | tee /etc/apt/sources.list.d/bazel.list && \
+  apt update -y && apt install bazel -y
+
 ENTRYPOINT [ "bash" ]
