--- a/asmcli/cloudbuild-main.yaml
+++ b/asmcli/cloudbuild-main.yaml
@@ -3,19 +3,24 @@ steps:
   ########
   # SETUP
   ########
-  - name: 'gcr.io/cloud-builders/bazel'
-    entrypoint: 'bazel'
-    args: ['build', 'merge']
-  - name: 'bash'
-    args: ['cp', '${_BAZEL_BIN}/${_SCRIPT_NAME}', asmcli/]
   - name: 'gcr.io/cloud-builders/docker'
-    dir: 'asmcli'
     id: 'build-tester-image'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}', 'asmcli/']
+
   - name: 'gcr.io/cloud-builders/docker'
-    dir: 'asmcli'
     id: 'publish-tester-image'
     args: ['push', 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}']
+
+  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    entrypoint: '/usr/bin/bazel'
+    args: ['build', 'merge']
+  
+  - name: 'bash'
+    args: ['cp', '${_BAZEL_BIN}/${_SCRIPT_NAME}', asmcli/]
+
+  - name: node
+    entrypoint: npm
+    args: ['install']
 
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'asmcli'
@@ -86,6 +91,11 @@ steps:
   #############
   # FAST TESTS
   #############
+  - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
+    id: 'unit-test'
+    entrypoint: '/usr/bin/bazel'
+    args: ['test', 'test', "--test_output=streamed"]
+
   - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
     dir: 'asmcli'
     id: 'run-release-debug'
