--- a/asm/istio/expansion/vm-eastwest-gateway.yaml
+++ b/asm/istio/expansion/vm-eastwest-gateway.yaml
@@ -27,6 +27,7 @@ spec:
         label:
           istio: eastwestgateway
           app: istio-eastwestgateway
+          istio.io/rev: asm-1100-1
         enabled: true
         k8s:
           env:
