--- a/scripts/asm-installer/cloudbuild-master.yaml
+++ b/scripts/asm-installer/cloudbuild-master.yaml
@@ -150,6 +150,7 @@ steps:
         --PROJECT_ID "${PROJECT_ID}"
         --BUILD_ID "${BUILD_ID}"
     env:
+      - '_LT_CLUSTER_NAME=long-term-test-cluster-environ-vm'
       - 'SERVICE_ACCOUNT=${_SERVICE_ACCOUNT}@${PROJECT_ID}.iam.gserviceaccount.com'
       - 'KEY_FILE=${_KEY_FILE}'
       - '_CI_ASM_IMAGE_LOCATION=${_IMAGE_LOCATION}'
