--- a/asm/istio/options/off-gcp.yaml
+++ b/asm/istio/options/off-gcp.yaml
@@ -20,21 +20,5 @@ spec:
     pilot:
       k8s:
         env:
-          - name: SPIFFE_BUNDLE_ENDPOINTS
-            value: ""
-          - name: TOKEN_AUDIENCES
-            value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
-  meshConfig:
-    trustDomain: "cluster.local"
-    defaultConfig:
-      proxyMetadata:
-        GKE_CLUSTER_URL: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
-        GCP_METADATA: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-metadata"}
-        CA_PROVIDER: "Citadel"
-        PLUGINS: ""
-        USE_TOKEN_FOR_CSR: "false"
-        GCE_METADATA_HOST: ""
-  values:
-    global:
-      caAddress: ""
-      pilotCertProvider: "istiod"
+          - name: ENABLE_STACKDRIVER_MONITORING
+            value: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.controlplane.monitoring.enabled"}
