--- a/asm/istio/options/citadel-ca.yaml
+++ b/asm/istio/options/citadel-ca.yaml
@@ -23,7 +23,7 @@ spec:
           - name: SPIFFE_BUNDLE_ENDPOINTS
             value: ""
           - name: TOKEN_AUDIENCES
-            value: "istio-ca,PROJECT_ID.svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.token-audiences"}
+            value: "istio-ca"
   meshConfig:
     trustDomain: "cluster.local"
     defaultConfig:
@@ -38,3 +38,6 @@ spec:
     global:
       caAddress: ""
       pilotCertProvider: "istiod"
+      sds:
+        token:
+          aud: "istio-ca"
