--- a/asmcli/cloudbuild-staging.yaml
+++ b/asmcli/cloudbuild-staging.yaml
@@ -182,12 +182,12 @@ steps:
   #############
 - name: 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}'
   dir: 'asmcli'
-  id: 'run-add-to-mesh'
+  id: 'run-create-mesh'
   entrypoint: '/bin/bash'
   args:
     - '-c'
     - >
-      ./tests/run_add_to_mesh
+      ./tests/run_create_mesh
       --PROJECT_ID "${PROJECT_ID}"
       --BUILD_ID "${BUILD_ID}"
   env:
